# Subdirectories
add_subdirectory(Accelerator)
add_subdirectory(Chemistry)
add_subdirectory(Constants)
add_subdirectory(DataTypes)
add_subdirectory(FileManagement)
add_subdirectory(ForceField)
add_subdirectory(Math)
add_subdirectory(MolecularMechanics)
add_subdirectory(MoleculeFormat)
add_subdirectory(Namelists)
add_subdirectory(Numerics)
add_subdirectory(Parsing)
add_subdirectory(Potential)
add_subdirectory(Random)
add_subdirectory(Reporting)
add_subdirectory(Restraints)
add_subdirectory(Structure)
add_subdirectory(Synthesis)
add_subdirectory(Topology)
add_subdirectory(Trajectory)
add_subdirectory(UnitTesting)

# Add the copyright.h file
install(FILES copyright.h DESTINATION include)
